5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1668_1392.log
== TEST (2019-04-15 19:03:37) 
-- CODE:
valor =float(input("qual o valor: "))
-- ERROR:
File "XXXX", line 2
    if (conta <==300+(10):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:04:34) 
-- CODE:
valor =float(input("qual o valor do cosumo de água: "))


-- ERROR:
File "XXXX", line 2
    if (conta <==300+(10):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:04:36) 
-- CODE:
valor =float(input("qual o valor do cosumo de água: "))


-- ERROR:
File "XXXX", line 2
    if (conta <==300+(10):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:04:46) 
-- CODE:
valor =float(input("qual o valor : "))


-- ERROR:
File "XXXX", line 2
    if (conta <==300+(10):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:11:47) 
-- CODE:
valor=float(input("qual o valor : "))

if (30+valor+3.50):
	mensagem ()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem ()
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:12:53) 
-- CODE:
valor=float(input("qual o valor m3 ?: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    mensagem ()
NameError: name 'mensagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:17) 
-- CODE:
valor=float(input("qual o valor m3 ?: "))
resultado = (valor*((3.5)+30))
print(round(resultado, 2))
	

-- OUTPUT:
268.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:38) 
-- CODE:
valor=float(input("qual o valor m3 ?: "))
resultado = (valor*3.5+30)
print(round(resultado, 2))
	

-- OUTPUT:
58.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:21:46) 
-- CODE:
valor=float(input("qual o valor m3 ?: "))
resultado = (valor*3.5+30)
print(round(resultado, 2))
	

-- EXECUTION TIME:
0.124307
-- TEST CASE 1:
---- input:
8.0
---- correct output:
54.0
---- user output:
58.0
-- TEST CASE 2:
---- input:
32.0
---- correct output:
142.0
---- user output:
142.0
-- TEST CASE 3:
---- input:
150.4

---- correct output:
556.4
---- user output:
556.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:21:55) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))
resultado = (valor*3.5+30)
print(round(resultado, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:22:00) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))
resultado = (valor*3.5+30)
print(round(resultado, 2))
	

-- EXECUTION TIME:
0.292198
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1392/main.py", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '8.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:22:01) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))
resultado = (valor*3.5+30)
print(round(resultado, 2))
	

-- EXECUTION TIME:
0.200681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1392/main.py", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '8.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:44) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))
if resultado = (valor*3.5+30):
	mensagem ("valor em metros cubicos ")
print(round(resultado, 2))
	

-- ERROR:
File "XXXX", line 2
    if resultado = (valor*3.5+30):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:56) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))
if resultado = (valor*3.5+30):
print(round(resultado, 2))
	

-- ERROR:
File "XXXX", line 2
    if resultado = (valor*3.5+30):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:23:58) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))
if resultado = (valor*3.5+30):
print(round(resultado, 2))
	

-- ERROR:
File "XXXX", line 2
    if resultado = (valor*3.5+30):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:09) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))
resultado = (valor*3.5+30)
print(round(resultado, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:23) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))
resultado = (valor*3.5+30)
print(round(resultado, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:24:47) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))

resultado = (valor*3.5+30)

print(round(resultado, 2))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:01) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:27:49) 
-- CODE:
valor=int(input("qual o valor m3 ?: "))
taxa = float(input("qual o valor da taxa m3 :"))
valor1 = float(input("qual o valor se menor 10 m3"))
valor = float(input("qual o valor se maior 10 m3"))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:12) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se menor: "))
preco2=float(input("qual o valor se maior: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:30:40) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se menor: "))
preco2=float(input("qual o valor se maior: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:22) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se menor: "))
preco2=float(input("qual o valor se maior: "))
resultado =(valor*preco2+taxa)
print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:32:49) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se menor: "))
preco2=float(input("qual o valor se maior: "))
resultado =(valor*preco2+taxa)
print(resultado)

-- EXECUTION TIME:
0.150364
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1392/main.py", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:32:55) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se menor: "))
preco2=float(input("qual o valor se maior: "))
resultado =(valor*preco2+taxa)
print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:26) 
-- CODE:
valor=int(input("qual o valor de consumo: "))
taxa=int(input("qual o valor da taxa: "))
preco1=int(input("qual o valor se menor: "))
preco2=int(input("qual o valor se maior: "))
resultado =(valor*preco2+taxa)
print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:36) 
-- CODE:
valor=int(input("qual o valor de consumo: "))
taxa=int(input("qual o valor da taxa: "))
preco1=int(input("qual o valor se menor: "))
preco2=int(input("qual o valor se maior: "))
resultado =(valor*preco2+taxa)
print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor=int(input())
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:37:22) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se menor: "))
preco2=float(input("qual o valor se maior: "))
if (valor >= 10):
	resultado=(valor*preco2+taxa)
else:
	resultado = (valor*preco1+taxa)
print(resultado)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:37:47) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se menor: "))
preco2=float(input("qual o valor se maior: "))
if (valor >= 10):
	resultado=(valor*preco2+taxa)
else:
	resultado = (valor*preco1+taxa)
print(resultado)

-- EXECUTION TIME:
0.168471
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1392/main.py", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:18) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se menor: "))
preco2=float(input("qual o valor se maior: "))
if (valor >= 10):
	resultado=(valor*preco2+taxa)
else:
	resultado = (valor*preco1+taxa)
print(round(resultado, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:38:30) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se menor: "))
preco2=float(input("qual o valor se maior: "))
if (valor >= 10):
	resultado=(valor*preco2+taxa)
else:
	resultado = (valor*preco1+taxa)
print(round(resultado, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:38:45) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se menor: "))
preco2=float(input("qual o valor se maior: "))
if (valor >= 10):
	resultado=(valor*preco2+taxa)
else:
	resultado = (valor*preco1+taxa)
print(round(resultado, 2))

-- EXECUTION TIME:
0.188656
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1392/main.py", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:39:30) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se maior: "))
preco2=float(input("qual o valor se menor: "))
if (valor >= 10):
	resultado=(valor*preco1+taxa)
else:
	resultado = (valor*preco2+taxa)
print(round(resultado, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:39:57) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se maior: "))
preco2=float(input("qual o valor se menor: "))
if (valor >= 10):
	resultado=(valor*preco1+taxa)
else:
	resultado = (valor*preco2+taxa)
print(round(resultado, 2))

-- EXECUTION TIME:
0.129723
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/1392/main.py", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:41:39) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=float(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se maior: "))
preco2=float(input("qual o valor se menor: "))
if (valor >= 10):
	resultado=(valor*preco1+taxa)
else:
	resultado = (valor*preco2+taxa)
print(round(resultado, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:21) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=int(input("qual o valor da taxa: "))
preco1=int(input("qual o valor se maior: "))
preco2=int(input("qual o valor se menor: "))
if (valor >= 10):
	resultado=(valor*preco1+taxa)
else:
	resultado = (valor*preco2+taxa)
print(round(resultado, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:41) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=int(input("qual o valor da taxa: "))
preco1=int(input("qual o valor se maior: "))
preco2=int(input("qual o valor se menor: "))
if (valor >= 10):
	resultado=(valor*preco1+taxa)
else:
	resultado = (valor*preco2+taxa)
print(round(resultado, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:43:11) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=int(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se maior: "))
preco2=float(input("qual o valor se menor: "))
if (valor >= 10):
	resultado=(valor*preco1+taxa)
else:
	resultado = (valor*preco2+taxa)
print(round(resultado, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:44:00) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=int(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se maior: "))
preco2=int(input("qual o valor se menor: "))
if (valor >= 10):
	resultado=(valor*preco1+taxa)
else:
	resultado = (valor*preco2+taxa)
print(round(resultado, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:44:21) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
taxa=int(input("qual o valor da taxa: "))
preco1=float(input("qual o valor se maior: "))
preco2=int(input("qual o valor se menor: "))
if (valor >= 10):
	resultado=(valor*preco1+taxa)
else:
	resultado = (valor*preco2+taxa)
print(round(resultado, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    taxa=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:46:40) 
-- CODE:
valor=float(input("qual o valor de consumo: "))
if (valor >= 10):
	resultado=(valor*3,5+30)
else:
	resultado = (valor*3+30)
print(round(resultado, 2))

-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:47:16) 
-- CODE:
valor = float(input("qual o valor do consumo?: "))

-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:48:51) 
-- CODE:
valor = float(input("qual o valor do consumo?: "))
if (valor >= 10):
	resultado = (valor*3,5+30)
else:
	resultado = (valor*3+30)
print(round(resultado, 2))

-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:49:19) 
-- CODE:
valor = int(input("qual o valor do consumo?: "))
if (valor >= 10):
	resultado = (valor*3,5+30)
else:
	resultado = (valor*3+30)

print(round(resultado, 2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    valor = int(input())
ValueError: invalid literal for int() with base 10: '8.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:49:31) 
-- CODE:
valor = float(input("qual o valor do consumo?: "))
if (valor >= 10):
	resultado = (valor*3,5+30)
else:
	resultado = (valor*3+30)

print(round(resultado, 2))

-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:49:44) 
-- CODE:
valor = float(input("qual o valor do consumo?: "))
if (valor >= 10):
	resultado = (valor*3,5+30)
else:
	resultado = (valor*3+30)

-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:14) 
-- CODE:
valor = float(input("qual o valor do consumo?: "))
if (valor >= 10):
	resultado = (valor*3,5+30)
else:
	resultado = (valor*3+30)
print=(resultado)

-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:34) 
-- CODE:
valor = float(input("qual o valor do consumo?: "))
if (valor >= 10):
	resultado = (valor*3,5+30)

-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:51:43) 
-- CODE:
valor = float(input("qual o valor do consumo?: "))
if (valor >= 10):
	resultado = valor* 3.5 + 30
else:
	resultado = valor * 3 + 30
print(resultado)

-- OUTPUT:
54.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:51:48) 
-- CODE:
valor = float(input("qual o valor do consumo?: "))
if (valor >= 10):
	resultado = valor* 3.5 + 30
else:
	resultado = valor * 3 + 30
print(resultado)

-- EXECUTION TIME:
0.185669
-- TEST CASE 1:
---- input:
8.0
---- correct output:
54.0
---- user output:
54.0
-- TEST CASE 2:
---- input:
32.0
---- correct output:
142.0
---- user output:
142.0
-- TEST CASE 3:
---- input:
150.4

---- correct output:
556.4
---- user output:
556.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
